--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^5.6.0-forward-compat.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
