--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "npm": "^5.6.0",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.6.0-forward-compat.0",
     "zone.js": "^0.8.26"
   },
